--- a/about/index.html
+++ b/about/index.html
@@ -85,7 +85,7 @@
 			<div class="ct-panel-content">
 				
 
-<form role="search" method="get" class="search-form" action="https://centerofci.tempurl.host/" aria-haspopup="listbox" data-live-results="thumbs">
+<form role="search" method="get" class="search-form" action="https://centerofci.org/" aria-haspopup="listbox" data-live-results="thumbs">
 
 	<input type="search" class="modal-field" placeholder="Search" value="" name="s" autocomplete="off" title="Search for..." aria-label="Search for...">
 
@@ -282,7 +282,7 @@
 
 
 <h2 class="has-background has-small-font-size wp-block-heading" style="background-color:#e5ddce">
-<strong>Complex</strong> <strong>Interventions: <a href="https://interventions.centerofci.tempurl.host/pub/complex-interventions/release/3">https://interventions.centerofci.tempurl.host/pub/complex-interventions/release/3</a></strong>
+<strong>Complex</strong> <strong>Interventions: <a href="https://interventions.centerofci.org/pub/complex-interventions/release/3">https://interventions.centerofci.org/pub/complex-interventions/release/3</a></strong>
 </h2>
 </div>
 </div>
@@ -410,7 +410,7 @@
 Effective May 12, 2023 CCI has wrapped up all of our research projects and winded down its operations. The Mathesar open source project, which has been hosted by CCI since 2021, continues under a new organizational structure.</span></span></span></p>
 <p><span style="font-family: Courier New,Courier,monospace;"><span style="font-size: 11pt;"><span style="color: #000000;">We are incredibly proud of what CCI has accomplished over the past three years. Our COVID-19 research and the work we led through the Chelsea Project saved lives and developed a model for interdisciplinary collaborations that can be replicated in other contexts. We incubated several projects from infancy that will live on outside of CCI—we are excited to see how they continue to grow from here. </span></span></span></p>
 <p><span style="font-family: Courier New,Courier,monospace;"><span style="font-size: 11pt;"><span style="color: #000000;">At the same time, CCI brought together a community of thoughtful, smart, and compassionate people who were united by a common purpose: to solve big, complex problems. We want to express our deep gratitude to our funders, Board members, staff, and the hundreds of members of CCI’s community who contributed to these successes. We know that this community will continue the work that we’ve started together through other avenues.</span></span></span></p>
-<p><span style="font-family: Courier New,Courier,monospace;"><span style="font-size: 11pt;"><span style="color: #000000;">We are preserving all of CCI’s work at </span></span><a style="text-decoration: none;" href="https://centerofci.org/projects/"><span style="font-size: 11pt;"><span style="color: #1155cc;"><u>https://centerofci.tempurl.host/projects/</u></span></span></a><span style="font-size: 11pt;"><span style="color: #000000;"> and all of our publications at </span></span><a style="text-decoration: none;" href="https://interventions.centerofci.tempurl.host/"><span style="font-size: 11pt;"><span style="color: #1155cc;"><u>https://interventions.centerofci.tempurl.host/</u></span></span></a><span style="font-size: 11pt;"><span style="color: #000000;">. If you are interested in thinking about and solving complex problems, we invite you to take a look and help carry this important work forward.</span></span></span></p>
+<p><span style="font-family: Courier New,Courier,monospace;"><span style="font-size: 11pt;"><span style="color: #000000;">We are preserving all of CCI’s work at </span></span><a style="text-decoration: none;" href="https://centerofci.org/projects/"><span style="font-size: 11pt;"><span style="color: #1155cc;"><u>https://centerofci.org/projects/</u></span></span></a><span style="font-size: 11pt;"><span style="color: #000000;"> and all of our publications at </span></span><a style="text-decoration: none;" href="https://interventions.centerofci.org/"><span style="font-size: 11pt;"><span style="color: #1155cc;"><u>https://interventions.centerofci.org/</u></span></span></a><span style="font-size: 11pt;"><span style="color: #000000;">. If you are interested in thinking about and solving complex problems, we invite you to take a look and help carry this important work forward.</span></span></span></p>
 		</div>
 
 
